2012-08-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* po/de_DE.po: Added new German translation.  Thanks t_bb_!

2012-07-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* po/ar.po: Added new Arabic translation.  Thanks Humaidan Mohammed!

2012-07-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.6.1 release.

2012-07-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* po/pt.po: Added new Portuguese translation.  Thanks Valter Asensio!

2012-07-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py: Fixed an escapeing problem of client info
	  links.  Improved a regular expression for Japanese hash tag.

2012-07-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme
	  Barrientos!
	* twitter/tweetentry.py (AddedHtmlMarkup.convert): Fixed character
	  escaping problems.

2012-06-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/api.py (TwitterAPIListTimeLine.get_options): Added
	  checking for list names. Thanks @Adan2JP!

2012-06-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* menu.py (FavMenuItem._is_enabled): Added support for self-favouring.
	* gfeedline.glade: Improved the welcome message.

2012-06-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* et.po: Updated Estonian translation.  Thanks Rivo Zängov!

2012-06-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.6 release.

2012-05-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.6 rc 1 release.
	* view.py (FeedWebView.on_hovering_over_link): Fixed a scroll lock
	  problem.

2012-04-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.6 beta 1 release.
	* twitter/output.py, twitter/api.py: Show user own reply messages
	  on reply tabs.
	* es_ES.po: Updated Spanish translation.  Thanks alexnmoya!

2012-04-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* filterliststore.py: Fixed a filter expiration bug.

2012-04-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
